# last-whisper-backend

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  DICTATION_API.md  Dockerfile  LICENSE  PROJECT_RENAME_SUMMARY.md  README.md  api.py  database.py  models.py  pyproject.toml  requirements.txt  run_api.py  test_api.py  tts_fb_service.py  tts_task_manager.py
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py
app/api/routes/: attempts.py  audio.py  health.py  items.py  metadata.py  stats.py  tags.py  translations.py  tts.py
app/core/: build_info.py  config.py  exceptions.py  logging.py  runtime_state.py  security.py  uvicorn_logging.py
app/models/: __init__.py  database.py  database_manager.py  enums.py  models.py  schemas.py  tag.py
app/services/: attempts_service.py  database.py  enhanced_task_manager.py  exceptions.py  item_audio_manager.py  item_task_manager.py  items_service.py  metadata_service.py  stats_service.py  tags_service.py  task_manager.py  task_service.py  tts_fb_service.py
app/services/outer/: tts_service.py  tts_task_manager.py
app/translation/: base.py  translation_google.py  translation_manager.py  translation_wrapper.py
app/translation/providers/: google_provider.py
app/tts_engine/: base.py  tts_engine.py  tts_engine_azure.py  tts_engine_gcp.py  tts_engine_local.py  tts_engine_manager.py  tts_engine_wrapper.py
app/utils/: sql_queries.py
doc/: API_PARAMETER_VALIDATION_RULES.md  ARCHITECTURE.md  DICTATION_API.md  DOCKER_SETUP.md
docs/: frontend-metadata-guide.md  health-endpoint-upgrade.md  system_spec.md
docs/migrations/: 2025-11-21_item_tts_translations.sql  2025-11-23_add_task_kind.sql  2025-11-23_drop_item_tts_unused_columns.sql
scripts/: init_db.py
tests/: __init__.py  conftest.py  test_attempts_api.py  test_attempts_service.py  test_config.py  test_database_manager.py  test_http_handlers.py  test_items_api.py  test_items_service.py  test_metadata_service.py  test_security.py  test_stats_service.py  test_tags_service.py  test_tts_engine_manager_upsert.py
tests/api/: test_metadata_api.py  test_translations_and_audio_refresh.py
tests/test_api/: test_attempts.py  test_health.py  test_items.py  test_stats.py  test_tts.py
tests/test_services/: test_attempts_service.py  test_database.py  test_items_service.py  test_stats_service.py  test_task_manager.py  test_tts_fb_service.py  test_tts_service.py  test_tts_task_manager.py
tts-api/: .gitignore  manager_sql.py  pyproject.toml  requirements.txt
tts-api/app/: main.py
tts-api/app/api/routes/: tts.py
tts-api/app/core/: exceptions.py
tts-api/app/services/: database.py  task_manager.py  tts_service.py
tts-api/scripts/: run_api.py
tts-api/tests/: conftest.py
tts-api/tests/test_api/: test_health.py
tts-api/tests/test_services/: test_task_manager.py  test_tts_service.py
